# django-ethiopian-datetime

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
ethiopian_datetime/: __init__.py  apps.py  fields.py  forms.py  utils.py  widgets.py
ethiopian_datetime/static/ethiopian_datetime/css/: redmond.calendars.picker.css
ethiopian_datetime/static/ethiopian_datetime/js/: calendar_init.js  jquery.calendars.ethiopian.js  jquery.calendars.js  jquery.calendars.picker.js  jquery.calendars.plus.js
ethiopian_datetime/templates/ethiopian_datetime/: ethiopian_date.html  ethiopian_split_datetime.html
ethiopian_datetime/templatetags/: ethiopian_datetime_tags.py
