[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django_ethiopian_datetime"
description = "Django datetime, date and time field for ethiopian calendars for Django Admin."
requires-python = ">=3.6"
keywords = ["django", "ethiopian", "datetime", "date", "geez", "field"]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version", "readme"]
dependencies = [
    "Django >= 2.0",
    "ethiocalendar >= 1.1",
]

[tool.setuptools.dynamic]
version = {attr = "ethiopian_datetime.__version__"}
readme = {file = ["README.md",]}